// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the component 1`] = `
.emotion-0 {
  display: inline-block;
  fill: #ffffff;
  height: 24px;
  width: 24px;
}

<div
  class="ControlledInputField"
  data-test-id="cf-ui-controlled-input-field"
>
  <div
    class="Checkbox ControlledInputField__input"
  >
    <input
      aria-label="label text"
      class="ControlledInput"
      data-test-id="cf-ui-controlled-input"
      id="checkbox"
      type="checkbox"
      value=""
    />
    <label
      class="Input__ghost Checkbox__ghost"
      for="checkbox"
    >
      <svg
        class="emotion-0"
        data-test-id="cf-ui-icon"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M20.7071 5.29289C21.0976 5.68342 21.0976 6.31658 20.7071 6.70711L9.70711 17.7071C9.51957 17.8946 9.26522 18 9 18C8.73478 18 8.48043 17.8946 8.29289 17.7071L3.29289 12.7071C2.90237 12.3166 2.90237 11.6834 3.29289 11.2929C3.68342 10.9024 4.31658 10.9024 4.70711 11.2929L9 15.5858L19.2929 5.29289C19.6834 4.90237 20.3166 4.90237 20.7071 5.29289Z"
        />
      </svg>
    </label>
  </div>
  <div>
    <label
      class="FormLabel ControlledInputField__label"
      data-test-id="cf-ui-form-label"
      for="checkbox"
    >
      label text
    </label>
  </div>
</div>
`;

exports[`renders the component as checked 1`] = `
.emotion-0 {
  display: inline-block;
  fill: #ffffff;
  height: 24px;
  width: 24px;
}

<div
  class="ControlledInputField my-extra-class"
  data-test-id="cf-ui-controlled-input-field"
>
  <div
    class="Checkbox ControlledInputField__input"
  >
    <input
      aria-label="Label Text"
      checked=""
      class="ControlledInput"
      data-test-id="cf-ui-controlled-input"
      id="checkbox"
      type="checkbox"
      value=""
    />
    <label
      class="Input__ghost Checkbox__ghost"
      for="checkbox"
    >
      <svg
        class="emotion-0"
        data-test-id="cf-ui-icon"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M20.7071 5.29289C21.0976 5.68342 21.0976 6.31658 20.7071 6.70711L9.70711 17.7071C9.51957 17.8946 9.26522 18 9 18C8.73478 18 8.48043 17.8946 8.29289 17.7071L3.29289 12.7071C2.90237 12.3166 2.90237 11.6834 3.29289 11.2929C3.68342 10.9024 4.31658 10.9024 4.70711 11.2929L9 15.5858L19.2929 5.29289C19.6834 4.90237 20.3166 4.90237 20.7071 5.29289Z"
        />
      </svg>
    </label>
  </div>
  <div>
    <label
      class="FormLabel ControlledInputField__label"
      data-test-id="cf-ui-form-label"
      for="checkbox"
    >
      Label Text
    </label>
  </div>
</div>
`;

exports[`renders the component as required 1`] = `
.emotion-0 {
  display: inline-block;
  fill: #ffffff;
  height: 24px;
  width: 24px;
}

<div
  class="ControlledInputField my-extra-class"
  data-test-id="cf-ui-controlled-input-field"
>
  <div
    class="Checkbox ControlledInputField__input"
  >
    <input
      aria-label="Label Text"
      class="ControlledInput"
      data-test-id="cf-ui-controlled-input"
      id="checkbox"
      required=""
      type="checkbox"
      value=""
    />
    <label
      class="Input__ghost Checkbox__ghost"
      for="checkbox"
    >
      <svg
        class="emotion-0"
        data-test-id="cf-ui-icon"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M20.7071 5.29289C21.0976 5.68342 21.0976 6.31658 20.7071 6.70711L9.70711 17.7071C9.51957 17.8946 9.26522 18 9 18C8.73478 18 8.48043 17.8946 8.29289 17.7071L3.29289 12.7071C2.90237 12.3166 2.90237 11.6834 3.29289 11.2929C3.68342 10.9024 4.31658 10.9024 4.70711 11.2929L9 15.5858L19.2929 5.29289C19.6834 4.90237 20.3166 4.90237 20.7071 5.29289Z"
        />
      </svg>
    </label>
  </div>
  <div>
    <label
      class="FormLabel ControlledInputField__label"
      data-test-id="cf-ui-form-label"
      for="checkbox"
    >
      Label Text
      <span
        class="FormLabel__required-text"
      >
        (
        required
        )
      </span>
    </label>
  </div>
</div>
`;

exports[`renders the component in a disabled state 1`] = `
.emotion-0 {
  display: inline-block;
  fill: #192532;
  height: 24px;
  width: 24px;
}

<div
  class="ControlledInputField my-extra-class ControlledInputField--disabled"
  data-test-id="cf-ui-controlled-input-field"
>
  <div
    class="Checkbox ControlledInputField__input"
  >
    <input
      aria-label="Label Text"
      class="ControlledInput ControlledInput--disabled"
      data-test-id="cf-ui-controlled-input"
      disabled=""
      id="checkbox"
      type="checkbox"
      value=""
    />
    <label
      class="Input__ghost Checkbox__ghost"
      for="checkbox"
    >
      <svg
        class="emotion-0"
        data-test-id="cf-ui-icon"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M20.7071 5.29289C21.0976 5.68342 21.0976 6.31658 20.7071 6.70711L9.70711 17.7071C9.51957 17.8946 9.26522 18 9 18C8.73478 18 8.48043 17.8946 8.29289 17.7071L3.29289 12.7071C2.90237 12.3166 2.90237 11.6834 3.29289 11.2929C3.68342 10.9024 4.31658 10.9024 4.70711 11.2929L9 15.5858L19.2929 5.29289C19.6834 4.90237 20.3166 4.90237 20.7071 5.29289Z"
        />
      </svg>
    </label>
  </div>
  <div>
    <label
      class="FormLabel ControlledInputField__label"
      data-test-id="cf-ui-form-label"
      for="checkbox"
    >
      Label Text
    </label>
  </div>
</div>
`;

exports[`renders the component with a help text 1`] = `
.emotion-0 {
  display: inline-block;
  fill: #ffffff;
  height: 24px;
  width: 24px;
}

<div
  class="ControlledInputField my-extra-class"
  data-test-id="cf-ui-controlled-input-field"
>
  <div
    class="Checkbox ControlledInputField__input"
  >
    <input
      aria-label="Label Text"
      class="ControlledInput"
      data-test-id="cf-ui-controlled-input"
      id="checkbox"
      type="checkbox"
      value=""
    />
    <label
      class="Input__ghost Checkbox__ghost"
      for="checkbox"
    >
      <svg
        class="emotion-0"
        data-test-id="cf-ui-icon"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M20.7071 5.29289C21.0976 5.68342 21.0976 6.31658 20.7071 6.70711L9.70711 17.7071C9.51957 17.8946 9.26522 18 9 18C8.73478 18 8.48043 17.8946 8.29289 17.7071L3.29289 12.7071C2.90237 12.3166 2.90237 11.6834 3.29289 11.2929C3.68342 10.9024 4.31658 10.9024 4.70711 11.2929L9 15.5858L19.2929 5.29289C19.6834 4.90237 20.3166 4.90237 20.7071 5.29289Z"
        />
      </svg>
    </label>
  </div>
  <div>
    <label
      class="FormLabel ControlledInputField__label"
      data-test-id="cf-ui-form-label"
      for="checkbox"
    >
      Label Text
    </label>
    <p
      class="HelpText ControlledInputField__help-text"
      data-test-id="cf-ui-help-text"
    >
      Help Text
    </p>
  </div>
</div>
`;

exports[`renders the component with a light label variation 1`] = `
.emotion-2 {
  color: #BF3045;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  font-size: 0.875rem;
  line-height: 1.5;
  margin: 0;
  display: inline-block;
}

.emotion-0 {
  display: inline-block;
  fill: #ffffff;
  height: 24px;
  width: 24px;
}

.emotion-3 {
  display: block;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-1 {
  display: inline-block;
  fill: #BF3045;
  height: 18px;
  width: 18px;
  margin-right: 0.25rem;
  margin-top: calc(0.25rem / 2);
  min-height: 18px;
  min-width: 18px;
}

<div
  class="ControlledInputField my-extra-class"
  data-test-id="cf-ui-controlled-input-field"
>
  <div
    class="Checkbox ControlledInputField__input"
  >
    <input
      aria-label="Label Text"
      class="ControlledInput"
      data-test-id="cf-ui-controlled-input"
      id="checkbox"
      type="checkbox"
      value=""
    />
    <label
      class="Input__ghost Checkbox__ghost"
      for="checkbox"
    >
      <svg
        class="emotion-0"
        data-test-id="cf-ui-icon"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M20.7071 5.29289C21.0976 5.68342 21.0976 6.31658 20.7071 6.70711L9.70711 17.7071C9.51957 17.8946 9.26522 18 9 18C8.73478 18 8.48043 17.8946 8.29289 17.7071L3.29289 12.7071C2.90237 12.3166 2.90237 11.6834 3.29289 11.2929C3.68342 10.9024 4.31658 10.9024 4.70711 11.2929L9 15.5858L19.2929 5.29289C19.6834 4.90237 20.3166 4.90237 20.7071 5.29289Z"
        />
      </svg>
    </label>
  </div>
  <div>
    <label
      class="FormLabel ControlledInputField__label ControlledInputField__label--light"
      data-test-id="cf-ui-form-label"
      for="checkbox"
    >
      Label Text
    </label>
    <div
      class="ControlledInputField__validation-message emotion-3"
      data-test-id="cf-ui-validation-message"
    >
      <svg
        class="emotion-1"
        data-test-id="cf-ui-icon"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M0 0h24v24H0V0z"
          fill="none"
        />
        <path
          d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
        />
      </svg>
      <p
        class="emotion-2"
      >
        Not valid!
      </p>
    </div>
  </div>
</div>
`;

exports[`renders the component with a validation message 1`] = `
.emotion-2 {
  color: #BF3045;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  font-size: 0.875rem;
  line-height: 1.5;
  margin: 0;
  display: inline-block;
}

.emotion-0 {
  display: inline-block;
  fill: #ffffff;
  height: 24px;
  width: 24px;
}

.emotion-3 {
  display: block;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-1 {
  display: inline-block;
  fill: #BF3045;
  height: 18px;
  width: 18px;
  margin-right: 0.25rem;
  margin-top: calc(0.25rem / 2);
  min-height: 18px;
  min-width: 18px;
}

<div
  class="ControlledInputField my-extra-class"
  data-test-id="cf-ui-controlled-input-field"
>
  <div
    class="Checkbox ControlledInputField__input"
  >
    <input
      aria-label="Label Text"
      class="ControlledInput"
      data-test-id="cf-ui-controlled-input"
      id="checkbox"
      type="checkbox"
      value=""
    />
    <label
      class="Input__ghost Checkbox__ghost"
      for="checkbox"
    >
      <svg
        class="emotion-0"
        data-test-id="cf-ui-icon"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M20.7071 5.29289C21.0976 5.68342 21.0976 6.31658 20.7071 6.70711L9.70711 17.7071C9.51957 17.8946 9.26522 18 9 18C8.73478 18 8.48043 17.8946 8.29289 17.7071L3.29289 12.7071C2.90237 12.3166 2.90237 11.6834 3.29289 11.2929C3.68342 10.9024 4.31658 10.9024 4.70711 11.2929L9 15.5858L19.2929 5.29289C19.6834 4.90237 20.3166 4.90237 20.7071 5.29289Z"
        />
      </svg>
    </label>
  </div>
  <div>
    <label
      class="FormLabel ControlledInputField__label"
      data-test-id="cf-ui-form-label"
      for="checkbox"
    >
      Label Text
    </label>
    <div
      class="ControlledInputField__validation-message emotion-3"
      data-test-id="cf-ui-validation-message"
    >
      <svg
        class="emotion-1"
        data-test-id="cf-ui-icon"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M0 0h24v24H0V0z"
          fill="none"
        />
        <path
          d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
        />
      </svg>
      <p
        class="emotion-2"
      >
        Not valid!
      </p>
    </div>
  </div>
</div>
`;

exports[`renders the component with a value 1`] = `
.emotion-0 {
  display: inline-block;
  fill: #ffffff;
  height: 24px;
  width: 24px;
}

<div
  class="ControlledInputField my-extra-class"
  data-test-id="cf-ui-controlled-input-field"
>
  <div
    class="Checkbox ControlledInputField__input"
  >
    <input
      aria-label="Label Text"
      class="ControlledInput"
      data-test-id="cf-ui-controlled-input"
      id="checkbox"
      type="checkbox"
      value="someValue"
    />
    <label
      class="Input__ghost Checkbox__ghost"
      for="checkbox"
    >
      <svg
        class="emotion-0"
        data-test-id="cf-ui-icon"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M20.7071 5.29289C21.0976 5.68342 21.0976 6.31658 20.7071 6.70711L9.70711 17.7071C9.51957 17.8946 9.26522 18 9 18C8.73478 18 8.48043 17.8946 8.29289 17.7071L3.29289 12.7071C2.90237 12.3166 2.90237 11.6834 3.29289 11.2929C3.68342 10.9024 4.31658 10.9024 4.70711 11.2929L9 15.5858L19.2929 5.29289C19.6834 4.90237 20.3166 4.90237 20.7071 5.29289Z"
        />
      </svg>
    </label>
  </div>
  <div>
    <label
      class="FormLabel ControlledInputField__label"
      data-test-id="cf-ui-form-label"
      for="checkbox"
    >
      Label Text
    </label>
  </div>
</div>
`;

exports[`renders the component with an additional class name 1`] = `
.emotion-0 {
  display: inline-block;
  fill: #ffffff;
  height: 24px;
  width: 24px;
}

<div
  class="ControlledInputField my-extra-class"
  data-test-id="cf-ui-controlled-input-field"
>
  <div
    class="Checkbox ControlledInputField__input"
  >
    <input
      aria-label="Label Text"
      class="ControlledInput"
      data-test-id="cf-ui-controlled-input"
      id="checkbox"
      type="checkbox"
      value=""
    />
    <label
      class="Input__ghost Checkbox__ghost"
      for="checkbox"
    >
      <svg
        class="emotion-0"
        data-test-id="cf-ui-icon"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M20.7071 5.29289C21.0976 5.68342 21.0976 6.31658 20.7071 6.70711L9.70711 17.7071C9.51957 17.8946 9.26522 18 9 18C8.73478 18 8.48043 17.8946 8.29289 17.7071L3.29289 12.7071C2.90237 12.3166 2.90237 11.6834 3.29289 11.2929C3.68342 10.9024 4.31658 10.9024 4.70711 11.2929L9 15.5858L19.2929 5.29289C19.6834 4.90237 20.3166 4.90237 20.7071 5.29289Z"
        />
      </svg>
    </label>
  </div>
  <div>
    <label
      class="FormLabel ControlledInputField__label"
      data-test-id="cf-ui-form-label"
      for="checkbox"
    >
      Label Text
    </label>
  </div>
</div>
`;
